--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>Dev Match</h1>
+    <h1>Welcome to Dev Match</h1>
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 <div class="row">
@@ -8,14 +8,14 @@
             <h2 class="text-center">Basic Membership</h2>
             <h4>Sign up for free and get basic access to the community.</h4>
             <br/>
-            <%= link_to "Sign up free with BASIC", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "Sign up free with BASIC", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
         </div>
     </div>
      <div class="col-md-6">
         <div class="well">
             <h2 class="text-center">Pro Membership</h2>
             <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
-            <%= link_to "Sign up with PRO", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+            <%= link_to "Sign up with PRO", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div>
     </div>
 </div>
