--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,12 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+.alert-notice {
+ background-color: #fcf8e3;
+ border-color: #faf2cc;
+ color: #8a6d3b;
+}
+
 //gradient from http:UIgradients.com
 //body {
 //    background: #085078;  /* fallback for old browsers */
