--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6 col-md-offset-3">
     <% if params[:plan] == '2' %>
       <h1 class="text-center">Pro Account</h1>
-      <p>Sign up for the PRO account for $10/month and get access to the community and contact information!</p>
+      <p>Sign up for the PRO account for £10/month and get access to the community and contact information!</p>
     <% else %>
       <h1 class="text-center">Basic Account</h1>
       <p class="text-center">Sign up for free and get BASIC access to the community.</p>
