--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,11 @@
         <div class="well">
             <h2 class="text-center">Your Profile</h2>
             <% if current_user.profile %>
-                <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+                <%= link_to "Edit your profile", edit_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <%= link_to "View profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
             <% else %>
-                <%= link_to "Create your profile!", new_user_profile_path(current_user) %>
+                <p>Create your profile so that you can share information with the community.</p>
+                <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
             <% end %>
         </div>
     </div>
@@ -21,7 +22,7 @@
         <div class="well">
             <h2 class="text-center">The Community</h2>
             <p>Visit the community to meet other developers, entrepreneurs and investors!</p>
-            <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+            <%= link_to "Visit the community!", "#", class: 'btn btn-default btn-lg btn-block' %>
         </div>
     </div>
     <% else %>
